# chatterbox

./: .gitignore  casio.txt  leah.txt  leahchatter.py  mychatter.py  pyproject.toml  script-1.txt  subscribe.txt  test.txt
