[project]
name = "chatterbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "faster-whisper>=1.2.0",
    "ffmpeg>=1.4",
    "gradio>=5.47.2",
    "librosa>=0.11.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "peft>=0.17.1",
    "s3tokenizer>=0.2.0",
    "safetensors>=0.6.2",
    "spaces>=0.42.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.2",
    "whisper>=1.1.10",
]
